--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="test.css" />
-		<script src="test.js"></script>
+		<link rel="stylesheet" href="foto.css" />
+		<script src="foto.js"></script>
 		<title>Fotogalerie Gozo und Malta</title>
 	</head>
 
