Footer Credits als Tabelle angelegt-

--- a/index.html
+++ b/index.html
@@ -15,17 +15,33 @@
 		<div class="opendPictureContainer" id="openedPictureContainer"></div>
 
 		<footer class="footer">
-			Credits: Icons by <a target="_blank" href="https://icons8.com"> Icons8 </a>
-			<a target="_blank" href="https://icons8.com/icon/73824/pfeil-nach-links"
-				> [ Pfeil nach links ]
-			</a>
+			<table>
+				<th>
+					Credits: Icons by
+					<a target="_blank" href="https://icons8.com"> Icons8 </a>
+				</th>
+				<tr></tr>
+				<td>
+					<a
+						target="_blank"
+						href="https://icons8.com/icon/73824/pfeil-nach-links">
+						Linkspfeil
+					</a>
+				</td>
 
-			<a target="_blank" href="https://icons8.com/icon/44043/rechts"
-				>[ Pfeil nach Rechts ]</a
-			>
-			<a target="_blank" href="https://icons8.com/icon/48340/zurück"
-				>[ Zurück-Button ]</a
-			>
+				<tr></tr>
+				<td>
+					<a target="_blank" href="https://icons8.com/icon/44043/rechts"
+						>Rechtspfeil
+					</a>
+				</td>
+				<tr></tr>
+				<td>
+					<a target="_blank" href="https://icons8.com/icon/48340/zurück"
+						>Zurück-Button</a
+					>
+				</td>
+			</table>
 		</footer>
 	</body>
 </html>
